fixed chart overflow

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@
 
 label {
   position: absolute;
-  top: 10px;
+  top: 610px;
   left: 1000px;
 }
 
